--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -217,7 +217,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🤖 AI Automation Testing</h1>
+            <h1>[BOT] AI Automation Testing</h1>
             <p>SuperConstruct Smoke Test Dashboard</p>
         </div>
 
@@ -228,19 +228,19 @@
                 <div class="feature-desc">Run all tests instantly</div>
             </div>
             <div class="feature-card">
-                <div class="feature-icon">🧠</div>
+                <div class="feature-icon">[BRAIN]</div>
                 <div class="feature-title">AI-Powered</div>
                 <div class="feature-desc">Smart element detection</div>
             </div>
             <div class="feature-card">
-                <div class="feature-icon">📊</div>
+                <div class="feature-icon">[CHART]</div>
                 <div class="feature-title">Detailed Reports</div>
                 <div class="feature-desc">HTML reports & screenshots</div>
             </div>
         </div>
 
         <div class="test-coverage">
-            <h3>📋 Test Coverage</h3>
+            <h3>[LIST] Test Coverage</h3>
             <div class="test-list">
                 <div class="test-item">Login</div>
                 <div class="test-item">Logout</div>
@@ -262,7 +262,7 @@
         </div>
 
         <button class="run-button" onclick="runSmokeTests()">
-            🚀 RUN ALL SMOKE TESTS
+            [START] RUN ALL SMOKE TESTS
         </button>
 
         <div class="status" id="status"></div>
@@ -315,3 +315,4 @@
     </script>
 </body>
 </html>
+
